# sphinx-project

./: README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  project.rst
project/: __init__.py  main.py  teste.py
