[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["ammelo <ammelo@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^6.1.3"
rst2pdf = "^0.99"
piccolo-theme = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
